<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:scrollIndicators="right">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:id="@+id/LayoutArticle">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:src="@drawable/lofter"
            android:scaleType="fitCenter"
            android:contentDescription="@string/img_des"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:adjustViewBounds="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLike"
            android:singleLine="true"
            android:text="@string/btn_like"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentLeft="false"
            android:id="@+id/LayoutLikeInfo"
            android:layout_alignParentBottom="false"
            android:layout_alignBottom="@+id/buttonLike"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/like_number"
                android:id="@+id/txtLikeNum"
                android:textColor="@android:color/white"
                android:maxLines="1"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_like_num"
                android:id="@+id/txtLikeInfo"
                android:textColor="@android:color/white"
                android:maxLines="1"
                android:layout_gravity="center" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_new_activity"
        android:id="@+id/buttonStartActivity"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/LayoutArticle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
